--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,9 @@
     background-position: center;
     background-attachment: fixed;
 }
-
+html {
+    scroll-behavior: smooth;
+  }
 
 
 /* Typography
