--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,19 @@ h3.into-sub-title{
 .galeria {
     background: linear-gradient(rgb(253, 253, 253), rgb(180, 179, 179));
 }
+.btn-whatsapp {
+    display:block;
+    width:70px;
+    height:70px;
+    color:#fff;
+    position: fixed;
+    right:20px;
+    bottom:70px;
+    border-radius:50%;
+    line-height:80px;
+    text-align:center;
+    z-index:999;
+}
 /* Typography
 ================================================== */
 
